feat: entities,ejbs,dtos

--- a/academics/pom.xml
+++ b/academics/pom.xml
@@ -96,6 +96,12 @@
             <scope>provided</scope>
         </dependency>
 
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-multipart-provider</artifactId>
+            <version>6.2.4.Final</version> <scope>provided</scope>
+        </dependency>
+
     </dependencies>
 
 
