--- a/academics/.env
+++ b/academics/.env
@@ -8,7 +8,7 @@ DB_PASS=dbsecret
 DB_HOST=db
 DB_PORT=5432
 DB_NAME=academics
-
+UPLOAD_DIR=/app/uploads
 POSTGRES_DRIVER_VERSION=42.5.4
 
 WILDFLY_ADMIN_PASSWORD=wildsecret
