--- a/academics/docker-compose.yaml
+++ b/academics/docker-compose.yaml
@@ -27,6 +27,7 @@ services:
       - DB_NAME
       - WILDFLY_ADMIN_PASSWORD
       - POSTGRES_DRIVER_VERSION
+      - GEMINI_API_KEY=AIzaSyAUstMXIuO21chKVK1AoeS1iifgq3sF33o
     volumes:
       - ./uploads:/app/uploads
     depends_on:
